--- a/index.html
+++ b/index.html
@@ -32,12 +32,15 @@
         </header>
 
         <div style="margin-bottom: 2em">
-          <a href="images/paper.pdf" class="button" style="border-bottom: 0px; background: #F2B9AC;"
+          <a
+            href="images/paper.pdf"
+            class="button"
+            style="border-bottom: 0px; background: #f2b9ac"
             >Paper</a
           >
           <a
-            href="https://youtu.be/s6zR2T9vn2c"
-            style="margin-left: 50px; border-bottom: 0px; background: #F2B9AC;"
+            href="dataset.zip"
+            style="margin-left: 50px; border-bottom: 0px; background: #f2b9ac"
             class="button"
             >Download HAA4D V1.0</a
           >
@@ -54,27 +57,30 @@
           <p>
             Human actions involve complex pose variations, and their 2D
             projections can be highly ambiguous. Thus 3D Spatio-temporal or 4D
-            (i.e., 3D+T) human skeletons, which are <b>photometric and viewpoint
-            invariant</b>, are an excellent alternative to 2D+T skeletons/pixels to
-            improve action recognition accuracy. This paper proposes a <b>new 4D
-            dataset</b>, HAA4D, consisting of more than <b>3,300 RGB videos</b> in <b>300
-            human atomic action classes</b>. HAA4D is <b>clean</b>, <b>diverse</b>, <b>class-balanced</b>
-            where each class is viewpoint-balanced with the use of 4D skeletons,
-            in which as few as one 4D skeleton per class is sufficient for
-            training a deep recognition model. Further, the choice of atomic
-            actions makes annotation even easier because each video clip lasts
-            for only a few seconds. All training and testing 3D skeletons in
-            HAA4D are <b>globally aligned</b>, using a deep alignment model to the same
-            global space, making each skeleton face the <b>negative z-direction</b>.
-            Such alignment makes matching skeletons more stable by <b>reducing
-            intraclass variations</b> and thus with fewer training samples per class
-            needed for action recognition. Given the high diversity and skeletal
-            alignment in HAA4D, we construct the first baseline <b>few-shot 4D
-            human atomic action recognition network</b> without bells and whistles,
-            which produces comparable or higher performance than relevant
-            state-of-the-art techniques relying on embedded space encoding
-            without explicit skeletal alignment, using the same small number of
-            training samples of unseen classes.
+            (i.e., 3D+T) human skeletons, which are
+            <b>photometric and viewpoint invariant</b>, are an excellent
+            alternative to 2D+T skeletons/pixels to improve action recognition
+            accuracy. This paper proposes a <b>new 4D dataset</b>, HAA4D,
+            consisting of more than <b>3,300 RGB videos</b> in
+            <b>300 human atomic action classes</b>. HAA4D is <b>clean</b>,
+            <b>diverse</b>, <b>class-balanced</b> where each class is
+            viewpoint-balanced with the use of 4D skeletons, in which as few as
+            one 4D skeleton per class is sufficient for training a deep
+            recognition model. Further, the choice of atomic actions makes
+            annotation even easier because each video clip lasts for only a few
+            seconds. All training and testing 3D skeletons in HAA4D are
+            <b>globally aligned</b>, using a deep alignment model to the same
+            global space, making each skeleton face the
+            <b>negative z-direction</b>. Such alignment makes matching skeletons
+            more stable by <b>reducing intraclass variations</b> and thus with
+            fewer training samples per class needed for action recognition.
+            Given the high diversity and skeletal alignment in HAA4D, we
+            construct the first baseline
+            <b>few-shot 4D human atomic action recognition network</b> without
+            bells and whistles, which produces comparable or higher performance
+            than relevant state-of-the-art techniques relying on embedded space
+            encoding without explicit skeletal alignment, using the same small
+            number of training samples of unseen classes.
           </p>
         </div>
 
@@ -109,22 +115,25 @@
 
         <div>
           <p>
-            The 3D skeleton is<b>viewpoint invariant</b>: all train/test 3D skeletons
-            in HAA4D are registered by their respective orthographic camera pose
-            estimated using our global alignment model. Thus a single training
-            3D skeleton per class is sufficient, in stark contrast to the use of
-            2D RGB images or skeletons, where a large number of training data is
-            required, and uneven sampling is an issue. <b>Trained with as few as
-            one 3D+T or 4D burpee skeleton, the network can readily recognize
-            any normalized burpee action shot from any viewing angles</b>, including
-            those under the person, which are difficult to capture. As shown in
-            the figure below, we can use the predicted camera poses to rectify
-            views of the input 3D skeletons and bring them to the same
-            coordinate system (globally aligned space). This rectification
-            provides a <b>stronger correlation between each sample</b> and allows us to
-            utilize the explicit information, such as the coordinate of the
-            joints, directly for sequence matching and obtain a higher accuracy
-            in differentiate the action.
+            The 3D skeleton is<b>viewpoint invariant</b>: all train/test 3D
+            skeletons in HAA4D are registered by their respective orthographic
+            camera pose estimated using our global alignment model. Thus a
+            single training 3D skeleton per class is sufficient, in stark
+            contrast to the use of 2D RGB images or skeletons, where a large
+            number of training data is required, and uneven sampling is an
+            issue.
+            <b
+              >Trained with as few as one 3D+T or 4D burpee skeleton, the
+              network can readily recognize any normalized burpee action shot
+              from any viewing angles</b
+            >, including those under the person, which are difficult to capture.
+            As shown in the figure below, we can use the predicted camera poses
+            to rectify views of the input 3D skeletons and bring them to the
+            same coordinate system (globally aligned space). This rectification
+            provides a <b>stronger correlation between each sample</b> and
+            allows us to utilize the explicit information, such as the
+            coordinate of the joints, directly for sequence matching and obtain
+            a higher accuracy in differentiate the action.
           </p>
         </div>
         <!-- Boxes -->
@@ -134,9 +143,7 @@
               ><img src="images/dataset.png" alt=""
             /></a>
             <div class="inner">
-              <a href="dataset.html" class="button fit"
-                >Dataset</a
-              >
+              <a href="dataset.html" class="button fit">Dataset</a>
             </div>
           </div>
 
