--- a/others.html
+++ b/others.html
@@ -21,9 +21,12 @@
       <div class="inner">
         <div style="margin-bottom: 2em">
           <h2>Downloads</h2>
-          <p>Paper - <a href="">Download</a></p>
-          <p>HAA4D V1.0 - <a href="">Download</a></p>
-          <p>Detailed information of HAA4D - <a href="">Download</a></p>
+          <p>Paper - <a href="images/paper.pdf">Download</a></p>
+          <p>HAA4D V1.0 - <a href="dataset.zip">Download</a></p>
+          <p>
+            Detailed information of HAA4D -
+            <a href="images/all_data.csv">Download</a>
+          </p>
         </div>
 
         <div style="margin-bottom: 2em">
@@ -101,7 +104,8 @@
         <div style="margin-bottom: 2em">
           <h2>Contact</h2>
           <p>
-            Please email Mu-Ruei Tseng (<a>morris88826@gmail.com</a>) for any questions.
+            Please email Mu-Ruei Tseng (<a>morris88826@gmail.com</a>) for any
+            questions.
           </p>
         </div>
 
