--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             >Paper</a
           >
           <a
-            href="dataset.zip"
+            href="download.html"
             style="margin-left: 50px; border-bottom: 0px; background: #f2b9ac"
             class="button"
             >Download HAA4D V1.0</a
@@ -152,12 +152,18 @@
               ><img src="images/annotation.png" alt=""
             /></a>
             <div class="inner">
-              <a
-                href="annotation.html"
-                class="button style2 fit"
-                data-poptrox="youtube,800x400"
+              <a href="annotation.html" class="button style2 fit"
                 >Annotation Tool</a
               >
+            </div>
+          </div>
+
+          <div class="box">
+            <a href="download.html" class="image fit"
+              ><img src="images/download.png" alt=""
+            /></a>
+            <div class="inner">
+              <a href="download.html" class="button style3 fit">Downloads</a>
             </div>
           </div>
 
@@ -168,8 +174,7 @@
             <div class="inner">
               <a
                 href="others.html"
-                class="button style3 fit"
-                data-poptrox="youtube,800x400"
+                class="button style4 fit"
                 >Others</a
               >
             </div>
