--- a/others.html
+++ b/others.html
@@ -19,15 +19,7 @@
 
     <div id="main">
       <div class="inner">
-        <div style="margin-bottom: 2em">
-          <h2>Downloads</h2>
-          <p>Paper - <a href="images/paper.pdf">Download</a></p>
-          <p>HAA4D V1.0 - <a href="dataset.zip">Download</a></p>
-          <p>
-            Detailed information of HAA4D -
-            <a href="images/all_data.csv">Download</a>
-          </p>
-        </div>
+        <h1>Others</h1>
 
         <div style="margin-bottom: 2em">
           <h2>Training Configuration</h2>
@@ -113,7 +105,7 @@
           <a
             href="index.html"
             class="button"
-            style="border-bottom: 0px; background: #9d7ed0"
+            style="border-bottom: 0px; background: #F2EFBD"
             >Back</a
           >
         </div>
@@ -138,6 +130,14 @@
                 data-poptrox="youtube,800x400"
                 >Annotation Tool</a
               >
+            </div>
+          </div>
+          <div class="box">
+            <a href="download.html" class="image fit"
+              ><img src="images/download.png" alt=""
+            /></a>
+            <div class="inner">
+              <a href="download.html" class="button style3 fit">Downloads</a>
             </div>
           </div>
         </div>
