--- a/annotation.html
+++ b/annotation.html
@@ -32,7 +32,7 @@
           </p>
         </div>
 
-        <div style="margin-bottom: 2em;">
+        <div style="margin-bottom: 2em">
           <h2>Get Started</h2>
           <div style="display: flex">
             <ol>
@@ -85,7 +85,7 @@
           </div>
         </div>
 
-        <div style="margin-bottom: 2em;">
+        <div style="margin-bottom: 2em">
           <h2>Demo</h2>
           <div>
             <p>
@@ -98,7 +98,7 @@
           </div>
         </div>
 
-        <div style="margin-bottom: 2em;">
+        <div style="margin-bottom: 2em">
           <h2>Further Improvements</h2>
           <ul>
             <li>
@@ -129,16 +129,20 @@
           </div>
 
           <div class="box">
+            <a href="download.html" class="image fit"
+              ><img src="images/download.png" alt=""
+            /></a>
+            <div class="inner">
+              <a href="download.html" class="button style3 fit">Downloads</a>
+            </div>
+          </div>
+
+          <div class="box">
             <a href="others.html" class="image fit"
               ><img src="images/others.png" alt=""
             /></a>
             <div class="inner">
-              <a
-                href="others.html"
-                class="button style3 fit"
-                data-poptrox="youtube,800x400"
-                >Others</a
-              >
+              <a href="others.html" class="button style4 fit">Others</a>
             </div>
           </div>
         </div>
